--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"chai": "^4.3.6",
 		"ethereum-waffle": "^3.4.4",
 		"ethers": "^5.6.9",
-		"hardhat": "^2.9.9"
+		"hardhat": "^2.9.9",
+		"prettier": "^2.7.1",
+		"prettier-plugin-solidity": "^1.0.0-beta.19"
 	},
 	"dependencies": {
 		"@openzeppelin/contracts": "^4.7.0",
